Added gitlab-ci, fixed naming of springboot service